# tabasgo

./: CMakeLists.txt  README.md  board.cpp  board.h  cmake.bat  gtp.cpp  gtp.h  main.cpp
doc/: notes.txt
